# pywssocks

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml  ci.yml  docker.yml  pypi.yml
docs/: principles.md
docs/api/: client.md  common.md  relay.md  server.md
docs/tutorial/: cli.md  command.md  docker.md  example.md  lib.md
images/: abstract.excalidraw  forward_proxy_diagram.excalidraw  reverse_proxy_diagram.excalidraw
pywssocks/: __init__.py  cli.py  client.go  client.py  common.py  message.py  relay.go  relay.py  server.go  server.py
tests/: conftest.py  test_cli.py  test_common.py  test_edge_cases.py  test_lib.py  test_message.py  test_upstream_proxy.py  utils.py
utils/: test_compatibility.py  udp_perf.py
